<resources>
    <string name="app_name">YourDigitalSelf</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."
    </string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">1173401166103812</string>
    <string name="fb_login_protocol_scheme">fb1173401166103812</string>
    <string name="title_activity_facebook">FacebookActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
    <color name="white">#FFFFFF</color>
    <string name="local">%1$s</string>
    <string name="pause">Pause Location Updates</string>
    <string name="resume">Resume Location Updates</string>


    <string-array name="Services">
        <item>Facebook</item>
        <item>Google Calendar</item>
        <item>Gmail</item>
        <item>Bank data</item>
        <item>Location data</item>
    </string-array>

    <string name="facebook">Facebook</string>
    <string name="gcal">Google Calendar</string>
    <string name="gmail">Gmail</string>
    <string name="bank">Bank data</string>
    <string name="location">Location data</string>


    <!-- Strings related to Settings -->
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_period">Sync period</string>
    <string-array name="pref_sync_frequency_titles">
        <item>1 week</item>
        <item>1 month</item>
        <item>6 months</item>
        <item>1 year</item>
        <item>Today</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>7</item>
        <item>30</item>
        <item>180</item>
        <item>365</item>
        <item>1</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />
    <string name="title_activity_sample">SampleActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_settings2">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings related to Google Drive -->
    <string name="button_subscribe">Listen for Changes</string>
    <string name="button_unsubscribe">Stop Listening for Changes</string>
    <string name="file_created">Created file: %1$s.</string>
    <string name="file_create_error">Error while trying to create the file.</string>
    <string name="select_folder">Select a folder</string>
    <string name="select_file">Select file</string>
    <string name="custom_property_deleted">Custom properties successfully deleted.</string>
    <string name="update_failed">Unable to update file.</string>
    <string name="change_event">File change event: %1$s</string>
    <string name="tickle_finished">Finished tickling. Restart watch to resume.</string>
    <string name="content_updated">Successfully edited contents.</string>
    <string name="content_update_failed">Error while editing contents.</string>
    <string name="metadata_updated">Successfully updated metadata.</string>
    <string name="custom_property_updated">Custom property successfully inserted or updated.</string>
    <string name="query_failed">Problem while retrieving files.</string>
    <string name="read_failed">Error while retrieving file.</string>
    <string name="metadata_retrieved">Metadata successfully fetched. Title: %1$s</string>
    <string name="content_loaded">File contents successfully read.</string>
    <string name="init_failed">Unable to initialize activity.</string>
    <string name="file_not_selected">No file selected, can not continue.</string>
    <string name="folder_not_selected">No folder selected, can not continue.</string>
    <string name="download_progress">Parsing your bank transactions...</string>

    <string name="location_permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>

    <string name="request_updates">Request updates</string>
    <string name="remove_updates">Remove updates</string>
    <string name="unknown_location">Unknown location</string>

    <string name="batched_location_updates">Batched location updates</string>

    <plurals name="num_locations_reported">
        <item quantity="zero">No location reported</item>
        <item quantity="one">One location reported</item>
        <item quantity="other">%d locations reported</item>
    </plurals>

    <string name="default_channel">Default channel</string>
    <string name="title_activity_intro">IntroActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_sms">SmsActivity</string>


</resources>
