<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Preference
        android:key="facebook"
        android:title="@string/facebook"
        android:summary="@string/facebook"
        android:icon="@drawable/fb_logo" >
    <intent
        android:action="android.intent.action.MAIN"
        android:targetPackage="com.rutgers.neemi"
        android:targetClass="com.rutgers.neemi.FacebookFragment"
        />
    </Preference>
    <Preference
        android:key="gcal"
        android:title="@string/gcal"
        android:icon="@drawable/google_calendar"
        android:summary="@string/gcal"
        android:defaultValue="false">
    <intent
        android:action="android.intent.action.MAIN"
        android:targetPackage="com.rutgers.neemi"
        android:targetClass="com.rutgers.neemi.GcalFragment"
        />
    </Preference>
    <Preference
        android:key="gmail"
        android:title="@string/gmail"
        android:icon="@drawable/gmail_icon"
        android:summary="@string/gmail"
        android:defaultValue="false" >
        <intent
            android:action="android.intent.action.MAIN"
            android:targetPackage="com.rutgers.neemi"
            android:targetClass="com.rutgers.neemi.GmailFragment"
            />
    </Preference>
    <Preference
        android:key="bank"
        android:title="@string/bank"
        android:icon="@drawable/mint"
        android:summary="@string/bank"
        android:defaultValue="false" >
        <intent
        android:action="android.intent.action.MAIN"
        android:targetPackage="com.rutgers.neemi"
        android:targetClass="com.rutgers.neemi.PlaidFragment"
        />
    </Preference>
    <Preference
        android:key="location"
        android:title="@string/location"
        android:icon="@drawable/location"
        android:summary="@string/location"
        android:defaultValue="false" />



</PreferenceScreen>
